skills added, homepage nav alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ a {
 
 .navbar-container {
 	display: flex;
+	max-width: calc(1400px + 2rem);
 	width: 100vw;
 	align-items: center;
 	@media (max-width: 742px) {
@@ -92,6 +93,7 @@ a {
 .navbar-container-home {
 	display: flex;
 	width: 100vw;
+	max-width: calc(1400px + 2rem);
 	align-items: center;
 	@media (max-width: 742px) {
 		position: sticky;
@@ -114,6 +116,10 @@ a {
 	@media (max-width: 742px) {
 		display: none;
 	}
+}
+.nes-container.is-rounded.is-home {
+	border: none;
+	margin: 12px 2.75rem !important;
 }
 
 .mobile-nav {
@@ -629,7 +635,7 @@ a {
 	width: 100px;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	gap: 12px;
 	align-items: center;
 	margin: 0.7rem 2.5rem;
 	padding: 8px;
@@ -639,20 +645,27 @@ a {
 }
 .skill-icon {
 	-ms-interpolation-mode: nearest-neighbor;
-	image-rendering: -moz-crisp-edges;
-	image-rendering: pixelated;
+	image-rendering: pixelated !important;
 	width: 100%;
 	max-width: 124px;
 	object-fit: contain;
 	height: 100%;
 	max-height: 124px;
 }
-.wordpress {
-	padding: 1rem 0.5rem;
+.wordpress,
+.git-skill,
+.github-skill,
+.react {
+	padding: 4px;
+}
+
+.skill-icon-container {
+	height: 76px;
+	aspect-ratio: 1;
 }
 
 .flex-skill p {
-	margin-top: 0.5rem;
+	margin: 0.5rem;
 	font-size: 1rem;
 	@media (max-width: 742px) {
 		font-size: 0.9rem !important;
